--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
   "author": "Thinkful, Inc.",
   "license": "UNLICENSED",
   "dependencies": {
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
     "knex": "^2.2.0",
     "pg": "^8.7.3"
   }
